# cpp_spareribs

./: .clangd  CMakeLists.txt  README.md
include/spareribs/: spareribs.hpp
include/spareribs/core/: composition.hpp  concepts.hpp  gaussian_jump_ev_map.hpp  independent_ev_map.hpp  multiple_evolution_map.hpp  orbit_tracker.hpp  simulation_pack.hpp  single_evolution_map.hpp  spike_tracker.hpp  vec2.hpp
include/spareribs/internal/: curand_generate.hpp  div_ceil.hpp
main/: CMakeLists.txt  giulio.cu  main.cu  orbit.cu  spike.cu
tests/: CMakeLists.txt  test1.cu
